--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ConBox::..</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css"/> <!--enlace de hoja de estilos -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
-
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
+     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
+     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
+     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-3.0.3.js"></script>
     <!--Boostrap JQuery -->
     <script src="js/jquery.js"></script>
 
@@ -22,10 +25,9 @@
     <!-- font Awesome -->
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- *****************************************Angular Librerías***************************************** -->
-    <script src="js/angular.js"></script>
+
     <script src="js/angular-drag-and-drop-lists.js"></script>
-    <script src="js/angular-animate.js"></script>
-    <script src="js/angular-sanitize.js"></script>
+
     <script src="js/angular-filter.min.js"></script>
     <!-- *****************************************Boostrap Angular Librerías***************************************** -->
     <script src="js/ui-bootstrap-tpls.js"></script>
@@ -88,9 +90,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
-          <div class="row" style="margin-top:10px;">
+          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <form >
+              <form >
 
                 <div class="input-group input-group-sm ">
                   <input style="border-radius:0;width:300px;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
@@ -100,118 +102,47 @@
                     </button>
                   </div>
                 </div>
-
-            <!-- Links -->
-            <ul class="navbar-nav m-auto" >
-              <li class="nav-item">
-                <a ng-show="MasterInfo[0].Home" class="nav-link  active" href="index.html">HOME <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a ng-show="MasterInfo[0].Products" class="nav-link " href="products.html">PRODUCTS</a>
-              </li>
-              <li class="nav-item">
-                <a ng-show="MasterInfo[0].Service" class="nav-link" href="#">SERVICES </a>
-              </li>
-              <li class="nav-item">
-                <a ng-show="MasterInfo[0].Apps" class="nav-link" href="#">APPLICATIONS</a>
-              </li>
-            </ul>
-          </form>
-</div></div>
-
-        </div>
-      </div>
-    </nav>
-    <main>
-
-      <div style="height: 305px">
-        <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-          <div uib-slide ng-repeat="slide in slides track by slide.ID" index="slide.ID">
-            <img ng-src="{{'/'+ slide.Image}}"  style="margin:auto;">
-            <div class="carousel-caption">
-              <h4>{{slide.Title}}</h4>
-              <p>{{slide.Message}}</p>
-              <button class="btn btn-secondary btn-info">{{slide.ButtonText}}</button>
+                <!-- Links -->
+                <ul class="navbar-nav m-auto" >
+                  <li class="nav-item">
+                    <a ng-show="MasterInfo[0].Home" class="nav-link  active" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a ng-show="MasterInfo[0].Products" class="nav-link " href="products.html">PRODUCTS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a ng-show="MasterInfo[0].Service" class="nav-link" href="#">SERVICES </a>
+                  </li>
+                  <li class="nav-item">
+                    <a ng-show="MasterInfo[0].Apps" class="nav-link" href="#">APPLICATIONS</a>
+                  </li>
+                </ul>
+              </form>
             </div>
           </div>
         </div>
       </div>
-
-      <section >
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          </ol>
-
-
-
-
-          <!-- <div class="carousel-inner" style="max-height: 600px !important;">
-
-            <whatever ng-repeat="CarouselItem in Carousel">
-              <div ng-class="CarouselItem.Class">
-                <img class="d-block w-100 img-responsive" ng-src="{{'/'+ CarouselItem.Image}}" alt="First slide"  height="700">
-                <div class="carousel-caption" style="padding: -15px;">
-                  <h3>{{CarouselItem.Title}}</h3>
-                  <p>{{CarouselItem.Message}}</p>
-                   <button class="btn btn-secondary btn-info">{{CarouselItem.ButtonText}}</button>
+    </nav>
+    <main>
+      <section>
+        <div  class="margin-top:200px;">
+          <div class="row">
+            <div class="col-md-12">
+              <div uib-carousel template-url="/tpl.html"  active="autoseq.wizardStep" no-wrap="true" on-carousel-next="autoseq.onNext()" style="height: 395px;">
+                <div uib-slide ng-repeat="slide in slides track by slide.ID" index="slide.ID"  style="height: 395px; " index="0">
+                  <img ng-src="{{'/'+ slide.Image}}" height="700" style="width:100%; "  >
+                  <div class="carousel-caption" style="top: 15%;">
+                    <h4>{{slide.Title}}</h4>
+                    <p>{{slide.Message}}</p>
+                    <button class="btn btn-secondary btn-info">{{slide.ButtonText}}</button>
+                  </div>
                 </div>
               </div>
-            </whatever>
-
-            <div class="carousel-item active">
-              <img class="d-block w-100 img-responsive" src="img/mac.jpg" alt="First slide"  height="700">
-              <div class="carousel-caption" style="padding: -15px;">
-                <h3>New Collection</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-secondary btn-info">SHOP NOW</button>
-              </div>
             </div>
-            <div class="carousel-item" style="background-color:#F6BC00;">
-              <img class="d-block w-100 img-responsive"   src="img/person-music.jpeg" alt="Second slide"  height="700">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>New Collection</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.  </p>
-                 <button class="btn btn-secondary btn-info">READ MORE</button>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100 img-responsive"  src="img/pesas.jpeg" alt="Second slide" height="700">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>New Collection</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                 <button class="btn btn-secondary btn-warning">READ MORE</button>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100 img-responsive"  src="img/cameras1100x700.png" alt="Second slide"  height="700">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>New Collection</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-                 <button class="btn btn-secondary btn-warning">READ MORE</button>
-              </div>
-            </div>
-
-
-          </div> -->
-
-
-
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+          </div>
         </div>
-      </section>
-       <section>
 
+      </section>
 
 
     <br> <br>
@@ -400,7 +331,7 @@
 
   <!-- </section> -->
 
-  <br><br>
+
   <!--
       <section>
   	    <div class="container">
@@ -452,6 +383,39 @@
   		</div>
     </section>-->
     </main>
+    <script type="text/ng-template" id="/tpl.html">
+      <div >
+        <div class="row">
+          <div class="col-md-12">
+            <div class="carousel ">
+             <div class="carousel-inner" ng-transclude></div>
+             <div class="carousel-controls">
+               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" ng-click="prev()" ng-class="{ disabled: isPrevDisabled() }" ng-show="slides.length > 1">
+               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+               <span class="sr-only">Previous</span>
+               </a>
+
+               <ol class="carousel-indicators" ng-show="slides.length > 1">
+                <li ng-repeat="slide in slides | orderBy:indexOfSlide track by $index" ng-class="{ active: isActive(slide) }">
+                </li>
+               </ol>
+
+               <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" ng-click="next()" ng-class="{ disabled: isNextDisabled() }" ng-show="slides.length > 1">
+               <span class="carousel-control-next-icon" aria-hidden="true"></span>
+               <span class="sr-only">Next</span>
+               </a>
+               <div >
+
+               </div>
+
+             </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </script>
   </body>
   <footer class="text-light">
     <div class="container">
