--- a/products_Old.html
+++ b/products_Old.html
@@ -2,58 +2,14 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ConBox::..</title>
-
-		<link href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/styles.css"/> <!--enlace de hoja de estilos -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
-
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
-     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
-     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
-     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-3.0.3.js"></script>
-    <!--Boostrap JQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!--Boostrap JS Para animaciones-->
-    <script src="js/bootstrap.min.js"></script>
-    <!--Listas-->
-    <script src="js/Lists.js"></script>
-    <!-- font Awesome -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- *****************************************Angular Librerías***************************************** -->
-
-    <script src="js/angular-drag-and-drop-lists.js"></script>
-
-    <script src="js/angular-filter.min.js"></script>
-    <!-- *****************************************Boostrap Angular Librerías***************************************** -->
-    <script src="js/ui-bootstrap-tpls.js"></script>
-    <!-- *****************************************Código de Select Boostrap Angular***************************************** -->
-    <script src="./select.js"></script>
-    <link rel="stylesheet" href="./select.css">
-    <script src="./demo.js"></script>
-    <!-- *****************************************Librería de angular loading***************************************** -->
-    <script src="js/spin.min.js"></script>
-    <script src="js/angular-loading.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/angular-loading.css" />
-    <!-- *****************************************Librería de angular tags inputs***************************************** -->
-    <script src="js/ng-tags-input.min.js"></script>
-    <!-- *****************************************Librería de file upload***************************************** -->
-    <script src="js/angular-file-upload.min.js"></script>
-    <!-- *****************************************Librería de boostrap toogle ***************************************** -->
-    <script src="js/angular-bootstrap-toggle.min.js"></script>
-    <!-- *****************************************Librería de controlador principal***************************************** -->
-    <script src="js/controller.js"></script>
-    <!-- *****************************************Alertas***************************************** -->
-    <link rel="stylesheet" type="text/css" href="https://ptreesys.mx/sharedfiles/src/sweetalert.css">
-    <script src="https://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
-    <!-- Pattern -->
-    <script src="js/ng-pattern-restrict.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>CubeShop</title><title>ConBox::..</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/styles.css"/> <!--enlace de hoja de estilos -->
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 	</head>
-	<body ng-controller="ctrlCubeShopHomeProducts">
+	<body>
 		<nav class="top-menu">
 			<div class="container">
 				<div class="row">
@@ -185,6 +141,7 @@
 										<p >99.00 $</p>
 									</div>
 								</div>
+								<div class="sticker sticker-new"></div>
 							</div>
 						</div>
 					</div>
